# cgem

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main.cgem
.github/workflows/: build.yml
cmake/: mingw-windows.cmake  mingw-xp-i686.cmake
include/cgem/: bmp.h  common.h  compiler.h  compiler_internal.h  diagnostic.h  format.h  ide.h  ide_file_tree.h  ide_index.h  ide_keymap.h  ide_menu.h  lint.h  palette.h  platform.h  semantic.h  theme.h  typecheck.h
include/lh/: bool.h  byte.h  char.h  error.h  initializer.h  ptr.h  version.h  void.h
include/lh/error/: code.h  desc.h  fields.h
include/lh/interval/: fields.h  flags.h
include/lh/interval/bounds/: fields.h  initializer.h
include/lh/numeric/: README.md  fixed.h  types.h
include/lh/pair/: README.md  fields.h
include/lh/pair/bounds/: fields.h
include/lh/return/: code.h
include/lh/str/: char.h  raw.h
include/lh/version/: fields.h  major.h  minor.h  patch.h
keymap/: default.keymap
scripts/: build-winxp.sh  ci-build.sh  fetch-mingw-i686.sh
src/cgem/: bmp.c  cgem.c  codegen.c  common.c  compile_util.c  compiler.c  compiler_env.c  diagnostic.c  format.c  ide.c  ide_file_tree.c  ide_index.c  ide_keymap.c  ide_menu.c  lint.c  parse.c  platform_linux.c  platform_win32.c  semantic.c  semantic_nav.c  symbols.c  typecheck.c
src/lh/: version.c
themes/: android-holo.c  atom.c  catppuccin.c  cmd-dark.c  cmd.c  dracula.c  far-dark.c  far.c  github-light.c  gruvbox-dark.c  gruvbox-light.c  monokai-light.c  monokai.c  nord.c  one-light.c  onedark.c  palette.c  registry.c  solarized-dark.c  solarized-light.c  tokyo-night.c  ubuntu-light.c  ubuntu.c  windows-aero-dark.c  windows-aero.c  windows-modern-dark.c  windows-modern.c  windows-xp-dark.c  windows-xp.c  xcode-dark.c  xcode.c
